Move CSS3 elements in separate class.

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <div class="document content">
+    <div class="document content css3">
       <h1>Some title</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
       commodo neque vulputate magna pharetra a consequat velit posuere. Etiam
